# Firewheel

./: .gitignore  Cargo.toml
assets/test_files/: ATTRIBUTION.txt
crates/firewheel-core/src/: sample_resource.rs
crates/firewheel-core/src/dsp/: delay_line.rs  mod.rs
crates/firewheel-macros/: Cargo.toml
crates/firewheel-nodes/: Cargo.toml
crates/firewheel-nodes/src/: convolution.rs  echo.rs  lib.rs
crates/firewheel-nodes/src/freeverb/: all_pass.rs  comb.rs  mod.rs
examples/visual_node_graph/: Cargo.toml
examples/visual_node_graph/src/: system.rs  ui.rs
