[package]
name = "visual_node_graph"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../", features = ["all_nodes"] }
symphonium = { version = "0.6.1", features = ["wav"] }
log.workspace = true
egui = "0.32"
egui-snarl = "0.8"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple-log = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
